[package]
name = "ipchanger"
version = "0.1.6"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
config = { version = "0.15.11", default-features = false, features = ["toml"] }
default-net = { version = "0.22.0", default-features = false }
netwatcher = "0.1.0"
owo-colors = { version = "4.2.2", default-features = false }
regex = { version = "1.11.1", default-features = false, features = ["std"] }
serde = { version = "1.0.219", features = ["derive"] }
sled = { version = "0.34.7", default-features = false }
thiserror = "2.0.12"
toml = "0.8.23"
winapi = { version = "0.3.9", features = ["consoleapi", "processenv", "winbase"] }
linkme = "0.3.33"
ipchanger_macros = { path = "ipchanger_macros" }

[build-dependencies]
winres = "0.1.12"

[profile.release]
strip = true
lto = true
panic = "abort"
overflow-checks = false
codegen-units = 1
