[package]
name = "ipchanger"
version = "0.1.7"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
config = { version = "0.15.19", default-features = false, features = ["toml"] }
default-net = { version = "0.22.0", default-features = false }
netwatcher = "0.2.0"
owo-colors = { version = "4.3.0", default-features = false }
regex = { version = "1.12.3", default-features = false, features = ["std"] }
serde = { version = "1.0.228", features = ["derive"] }
sled = { version = "0.34.7", default-features = false }
thiserror = "2.0.18"
toml = "0.8.23"
winapi = { version = "0.3.9", features = ["consoleapi", "processenv", "winbase"] }
linkme = "0.3.35"
ipchanger_macros = { path = "ipchanger_macros" }
pinger = { git = "https://github.com/arturkreihs/pinger" }

[build-dependencies]
winres = "0.1.12"

[profile.release]
strip = true
lto = true
panic = "abort"
overflow-checks = false
codegen-units = 1
